fluxcd/apps/production/nekomimi/netpol/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: landing
spec:
  podSelector:
    matchLabels:
      app: landing
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - ingress-anubis
          - ingress-nginx-onion
    ports:
    - port: 80
      protocol: TCP
